# dur

./: README  dur  dur.cabal  dur.hs  g  mydate
src/: Main.hs
src/Data/: IOList.hs
